# advent

./: pyproject.toml
input/2015/: day_23
source/: cheat_3.py  cheat_4.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py
source/2015/: 20.js  cheat_day_14.py  cheat_day_18.py  cheat_day_7.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_16_cheat.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_21.py  day_23.py  day_24.py  day_25.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  test_day_3.py
source/2016/: day_1.py  day_2.py  day_3.py
source/2021/: cheat_4.py  cheat_5.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py
