[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Joshua Dunnink <Joshua.Dunnink@ing.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
flake8 = "^4.0.1"
numpy = "^1.21.4"
mlrose = "^1.3.0"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
