[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Joshua Dunnink <Joshua.Dunnink@ing.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
flake8 = "^4.0.1"
numpy = "^1.21.4"
mlrose = "^1.3.0"
six = "^1.16.0"
click = "^8.1.3"
pylint = "^2.13.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
